test/compile_errors/err_no_alloc_vec_new.w
//! expect-check-fail: Vec.new allocates here

use std.collections

@[no_alloc]
fn main:
    let v: Vec[i32] = Vec.new()
    v.len()
